--- a/app/src/main/res/layout/case_by_country_item.xml
+++ b/app/src/main/res/layout/case_by_country_item.xml
@@ -27,11 +27,11 @@
                 android:id="@+id/header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_13sdp"
+                android:layout_marginTop="@dimen/_19sdp"
                 android:fontFamily="@font/semibold"
                 android:text="Total Cases"
                 android:textColor="?attr/PrimaryTextLight2"
-                android:textSize="@dimen/_10sdp"
+                android:textSize="@dimen/_11sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -40,11 +40,13 @@
                 android:id="@+id/value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginTop="@dimen/_3sdp"
                 android:fontFamily="@font/bold"
                 android:text="20,000"
                 android:textColor="?attr/PrimaryText"
-                android:textSize="@dimen/_21sdp"
+                android:textSize="@dimen/_19sdp"
+                android:layout_marginBottom="@dimen/_21sdp"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/header" />
@@ -55,10 +57,10 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/regular"
                 android:text=""
+                android:visibility="gone"
                 android:textColor="?attr/PrimaryText"
                 android:textSize="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_1sdp"
-                android:layout_marginBottom="@dimen/_12sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/value" />
