--- a/app/src/main/res/layout/case_by_country.xml
+++ b/app/src/main/res/layout/case_by_country.xml
@@ -15,6 +15,7 @@
         android:overScrollMode="never"
         android:paddingStart="@dimen/_10sdp"
         android:paddingEnd="@dimen/_10sdp"
+        android:paddingTop="@dimen/_15sdp"
         android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +25,7 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminateTint="?attr/PrimaryText"
+        android:indeterminateTint="#5FC5BA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
