--- a/app/src/main/res/layout/states_frag.xml
+++ b/app/src/main/res/layout/states_frag.xml
@@ -4,106 +4,111 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="@dimen/_280sdp"
-        android:layout_height="@dimen/_310sdp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/_2sdp"
 
-        app:cardBackgroundColor="?attr/backgroundSecondary"
-        android:layout_marginBottom="@dimen/_8sdp"
-        app:cardCornerRadius="@dimen/_17sdp"
-        app:cardElevation="5dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            android:layout_marginTop="@dimen/_5sdp"
-            android:orientation="vertical">
+        <androidx.cardview.widget.CardView
+            android:layout_width="@dimen/_280sdp"
+            android:layout_height="@dimen/_310sdp"
+            android:layout_gravity="center_horizontal"
+            app:cardBackgroundColor="?attr/backgroundSecondary"
+            app:cardCornerRadius="@dimen/_17sdp"
+            android:layout_marginTop="@dimen/_6sdp"
+            android:layout_marginBottom="@dimen/_6sdp"
+            app:cardElevation="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+
                 android:layout_marginTop="@dimen/_5sdp"
-                android:weightSum="5"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_marginEnd="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="0dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="State/UT"
-                    android:textColor="?attr/PrimaryText"
-                    android:layout_weight="1"
-                    android:textSize="@dimen/_9sdp"
-                    android:textAlignment="center"
-                    android:fontFamily="@font/bold"
-                    />
-                <TextView
-                    android:layout_width="0dp"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:orientation="horizontal"
+                    android:weightSum="4">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/bold"
+                        android:text="State/UT"
+                        android:textAlignment="center"
+                        android:textColor="?attr/PrimaryText"
+                        android:textSize="@dimen/_9sdp" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/bold"
+
+                        android:text="Total"
+                        android:textAlignment="center"
+
+                        android:textColor="#73B1DA"
+
+                        android:textSize="@dimen/_9sdp" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/bold"
+
+                        android:text="Recovered"
+                        android:textAlignment="center"
+
+                        android:textColor="#5FC5BA"
+                        android:textSize="@dimen/_9sdp" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/bold"
+                        android:text="Deaths"
+                        android:textAlignment="center"
+                        android:textColor="#FF7272"
+                        android:textSize="@dimen/_9sdp" />
+
+
+                </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Total"
-                    android:textAlignment="center"
-
-                    android:layout_weight="1"
-                    android:textColor="?attr/PrimaryText"
-
-                    android:textSize="@dimen/_9sdp"
-
-                    android:fontFamily="@font/bold"
-                    /><TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Recovered"
-                android:textAlignment="center"
-
-                android:layout_weight="1"
-                android:textSize="@dimen/_9sdp"
-
-                android:textColor="#5FC5BA"
-                android:fontFamily="@font/bold"
-                /><TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Active"
-                android:textColor="#73B1DA"
-
-                android:layout_weight="1"
-                android:textAlignment="center"
-
-                android:textSize="@dimen/_9sdp"
-
-                android:fontFamily="@font/bold"
-                /><TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Deaths"
-                android:layout_weight="1"
-                android:textSize="@dimen/_9sdp"
-                android:textColor="#FF7272"
-                android:textAlignment="center"
-
-
-                android:fontFamily="@font/bold"
-                />
-
-
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                 />
             </LinearLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_marginEnd="@dimen/_5sdp"
 
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:layout_height="wrap_content"
-                android:id="@+id/recyclerView"
-                />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="6dp"
+            android:indeterminateTint="#5FC5BA"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
