--- a/app/src/main/res/layout/stats_fragment.xml
+++ b/app/src/main/res/layout/stats_fragment.xml
@@ -1,135 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
     android:background="?attr/backgroundMain"
-    android:animateLayoutChanges="true"
-    android:id="@+id/baap"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
+    <ScrollView
+        android:id="@+id/scrollView2"
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="@dimen/_98sdp"
-        android:layout_height="@dimen/_98sdp"
-        android:layout_marginTop="@dimen/_7sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/corona" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_14sdp"
-        android:orientation="horizontal"
-        android:id="@+id/heading"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="@dimen/_18sdp"
-            android:layout_height="@dimen/_18sdp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="@dimen/_5sdp"
-            android:src="@drawable/warning" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/baap"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/exbold"
-            android:text="COVID-19"
-            android:textColor="#5FC5BA"
-            android:textSize="@dimen/_30sdp"/>
+            android:layout_gravity="center_horizontal"
+            android:animateLayoutChanges="true"
+            android:background="?attr/backgroundMain"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/semibold"
-        android:text="2019-"
-        android:textSize="@dimen/_15sdp"
-        android:textColor="?attr/PrimaryTextLight2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/heading" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="@dimen/_98sdp"
+                android:layout_height="@dimen/_98sdp"
+                android:layout_marginTop="@dimen/_7sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/corona" />
 
-    <com.sehat.tracker.fragments.HeightWrappingViewPager2
-        android:id="@+id/viewpager"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:overScrollMode="never"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:paddingLeft="@dimen/_25sdp"
-        android:paddingRight="@dimen/_25sdp"
-        android:clipToPadding="false"
-        android:animateLayoutChanges="true"
+            <LinearLayout
+                android:id="@+id/heading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imageView">
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        >
+                <ImageView
+                    android:layout_width="@dimen/_18sdp"
+                    android:layout_height="@dimen/_18sdp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:src="@drawable/warning" />
 
-    </com.sehat.tracker.fragments.HeightWrappingViewPager2>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/exbold"
+                    android:text="COVID-19"
+                    android:textColor="#5FC5BA"
+                    android:textSize="@dimen/_30sdp" />
 
-    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
-        android:id="@+id/worm_dots_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:dotsColor="#5FC5BA"
-        app:dotsCornerRadius="@dimen/_6sdp"
-        app:dotsSize="@dimen/_10sdp"
+            </LinearLayout>
 
-        app:dotsSpacing="@dimen/_3sdp"
-        app:dotsStrokeColor="#5FC5BA"
-        app:dotsStrokeWidth="@dimen/_2sdp"
-        android:layout_marginTop="@dimen/_20sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/viewpager" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/semibold"
+                android:text="2019-"
+                android:textColor="?attr/PrimaryTextLight2"
+                android:textSize="@dimen/_15sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/heading" />
 
-    <Button
-        android:id="@+id/view_button"
-        android:layout_width="124dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="@dimen/_28sdp"
-        android:background="@drawable/roundbutton"
-        android:fontFamily="@font/regular"
-        android:minHeight="0dp"
-        android:paddingStart="@dimen/_17sdp"
-        android:paddingTop="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_17sdp"
-        android:paddingBottom="@dimen/_10sdp"
-        android:text="View more"
-        android:textAllCaps="false"
-        android:textColor="#fff"
-        android:textSize="@dimen/_12sdp"
-        android:layout_marginBottom="@dimen/_15sdp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/worm_dots_indicator"
-        />
+            <com.sehat.tracker.fragments.HeightWrappingViewPager2
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:animateLayoutChanges="true"
+                android:clipToPadding="false"
+                android:overScrollMode="never"
+                android:paddingLeft="@dimen/_25sdp"
+                android:paddingRight="@dimen/_25sdp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+            </com.sehat.tracker.fragments.HeightWrappingViewPager2>
+
+            <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
+                android:id="@+id/worm_dots_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20sdp"
+                app:dotsColor="#5FC5BA"
+                app:dotsCornerRadius="@dimen/_6sdp"
+
+                app:dotsSize="@dimen/_10sdp"
+                app:dotsSpacing="@dimen/_3sdp"
+                app:dotsStrokeColor="#5FC5BA"
+                app:dotsStrokeWidth="@dimen/_2sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/viewpager" />
+
+            <Button
+                android:id="@+id/view_button"
+                android:layout_width="124dp"
+                android:layout_height="49dp"
+                android:layout_marginTop="@dimen/_28sdp"
+                android:layout_marginBottom="@dimen/_15sdp"
+                android:background="@drawable/roundbutton"
+                android:fontFamily="@font/regular"
+                android:minHeight="0dp"
+                android:paddingStart="@dimen/_17sdp"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_17sdp"
+                android:paddingBottom="@dimen/_10sdp"
+                android:text="View more"
+                android:textAllCaps="false"
+                android:textColor="#fff"
+                android:textSize="@dimen/_12sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/worm_dots_indicator" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:elevation="@dimen/_5sdp"
-        android:indeterminateTint="?attr/PrimaryText"
+        android:elevation="6dp"
+        android:indeterminateTint="#5FC5BA"
+        android:layout_marginBottom="@dimen/_100sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
